<resources>
    <string name="app_name">lab_3</string>
    <string name="result">0</string>
    <string name="change">+/-</string>
    <string name="clear">AC</string>
    <string name="back">B</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_dot">.</string>
    <string name="sum">+</string>
    <string name="sub">-</string>
    <string name="mult">x</string>
    <string name="div">/</string>
    <string name="root">√</string>
    <string name="eq">=</string>
</resources>