<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/output"
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:layout_marginTop="80dp"
        android:gravity="right"
        android:hint="@string/result"
        android:inputType="number"
        android:textSize="100sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="6dp"
        tools:ignore="MissingConstraints" />

    <TableLayout
        android:id="@+id/tbl_layout"
        android:layout_width="fill_parent"
        android:layout_height="480dp"
        app:layout_constraintTop_toBottomOf="@+id/output"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/button1"
                android:textSize="30sp"
                android:backgroundTint="@color/grey_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/back"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"/>

            <Button
                android:id="@+id/button2"
                android:textSize="30sp"
                android:backgroundTint="@color/grey_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/clear"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"/>

            <Button
                android:id="@+id/button3"
                android:textSize="30sp"
                android:backgroundTint="@color/grey_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/change"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"/>

            <Button
                android:id="@+id/button4"
                android:textSize="30sp"
                android:backgroundTint="@color/yellow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/root"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:id="@+id/button5"
                android:textSize="30sp"
                android:backgroundTint="@color/grey_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_7"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"/>

            <Button
                android:id="@+id/button6"
                android:textSize="30sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:backgroundTint="@color/grey_2"
                android:text="@string/_8"/>

            <Button
                android:id="@+id/button7"
                android:textSize="30sp"
                android:backgroundTint="@color/grey_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_9"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"/>

            <Button
                android:id="@+id/button8"
                android:textSize="30sp"
                android:backgroundTint="@color/yellow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/div"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:id="@+id/button9"
                android:textSize="30sp"
                android:backgroundTint="@color/grey_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_4"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"/>

            <Button
                android:id="@+id/button10"
                android:textSize="30sp"
                android:backgroundTint="@color/grey_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_5"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"/>

            <Button
                android:id="@+id/button11"
                android:textSize="30sp"
                android:backgroundTint="@color/grey_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_6"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"/>

            <Button
                android:id="@+id/button12"
                android:textSize="30sp"
                android:backgroundTint="@color/yellow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/mult"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"/>
        </TableRow>
        <TableRow
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:id="@+id/button13"
                android:textSize="30sp"
                android:backgroundTint="@color/grey_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_1"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"/>

            <Button
                android:id="@+id/button14"
                android:textSize="30sp"
                android:backgroundTint="@color/grey_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/_2"/>

            <Button
                android:id="@+id/button15"
                android:textSize="30sp"
                android:backgroundTint="@color/grey_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/_3"/>

            <Button
                android:id="@+id/button16"
                android:textSize="30sp"
                android:backgroundTint="@color/yellow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sub"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/button17"
                android:textSize="30sp"
                android:backgroundTint="@color/grey_2"
                android:layout_width="252dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_span="2"
                android:text="@string/_0" />
            <Button
                android:id="@+id/button18"
                android:textSize="30sp"
                android:backgroundTint="@color/grey_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_dot"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"/>
            <Button
                android:id="@+id/button19"
                android:textSize="30sp"
                android:backgroundTint="@color/yellow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sum"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/button20"
                android:textSize="40sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/eq"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="6dp"
                android:layout_span="4"
                android:backgroundTint="@color/yellow"/>
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>